fix: elements 'flex-wrap' feature: wrap -> nowrap

--- a/src/components/carousel/carousel.scss
+++ b/src/components/carousel/carousel.scss
@@ -19,7 +19,7 @@
   flex-direction: row;
   justify-content: flex-start;
   align-items: flex-start;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   position: absolute;
   top: 0;
   left: 0;
