--- a/src/components/checkbox-expandable/__item/checkbox-expandable__item.scss
+++ b/src/components/checkbox-expandable/__item/checkbox-expandable__item.scss
@@ -11,7 +11,7 @@
   flex-direction: row;
   justify-content: flex-start;
   align-items: flex-start;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   font-family: $montserrat;
   font-weight: 400;
   font-size: $fs_base;
