--- a/src/components/dropdown/_type_rooms/dropdown_type_rooms.scss
+++ b/src/components/dropdown/_type_rooms/dropdown_type_rooms.scss
@@ -9,7 +9,7 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   position: relative;
   width: 100%;
   height: 100%;
