--- a/src/components/footer/__info/_hidden/footer__info_hidden.scss
+++ b/src/components/footer/__info/_hidden/footer__info_hidden.scss
@@ -10,7 +10,7 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: flex-start;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     min-width: 260px;
     width: 260px;
     height: auto;
