--- a/src/components/footer/__subsciption/footer__subscription.scss
+++ b/src/components/footer/__subsciption/footer__subscription.scss
@@ -7,7 +7,7 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   width: 260px;
   height: 152px;
   padding-top: 4px;
